--- a/release/less/footer.less
+++ b/release/less/footer.less
@@ -1,3 +1,10 @@
+.wrapper() {
+    max-width: 1170px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
 .footer {
     display: flex;
     flex-direction: column;
@@ -9,12 +16,16 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding: 0 375px 80px 375px;
-    @block-width: 25%;
+    padding: 0 0 80px 0;
     @between-blocks: 30px;
 
+    &-wrapper {
+        .wrapper();
+    }
+
     &-company {
-        width: @block-width;
+        width: 100%;
+        flex-grow: 1;
         margin: 80px @between-blocks 0 0;
 
         &-logo {
@@ -125,7 +136,8 @@
     }
 
     .add-default-sizes(@right-margin: @between-blocks) {
-        width: @block-width;
+        width: 100%;
+        flex-grow: 1;
         margin: 108px @right-margin 0 0;
     }
 
@@ -198,6 +210,8 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: flex-start;
+        align-content: flex-start;
 
         &-title {
             .title();
@@ -229,11 +243,68 @@
 
 .support {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     background-color: #111111;
-    padding: 45px 375px 52px 375px;
+    padding: 45px 0 52px 0;
     @padding: 8px;
     @before-margin: 4px;
+
+    &-wrapper {
+        .wrapper();
+    }
+
+    &-block-1 {
+        display: flex;
+
+        &>:nth-child(1) {
+            color: #959595;
+            padding: 0 @padding 0 0;
+        }
+
+        &>:nth-child(1)::before {
+            content: "Copyright © 2015";
+            color: #555555;
+            margin: 0 @before-margin 0 0;
+        }
+
+        &>:nth-child(3) {
+            color: #c7b299;
+        }
+
+        &>:last-child {
+            padding: 0 0 0 @padding;
+            border: none;
+        }
+    }
+
+    &-block-2 {
+        display: flex;
+        justify-content: flex-end;
+        margin: 0 0 0 auto;
+
+        &>:nth-child(1) {
+            color: #959595;
+            padding: 0 @padding 0 0;
+        }
+
+        &>:nth-child(1)::before {
+            content: "Designed by";
+            color: #555555;
+            margin: 0 @before-margin 0 0;
+        }
+
+        &>:nth-child(2) {
+            color: #959595;
+            padding: 0 0 0 @padding;
+            border: none;
+        }
+
+        &>:nth-child(2)::before {
+            content: "Only on";
+            color: #555555;
+            margin: 0 @before-margin 0 0;
+        }
+    }
 
     &-link {
         font-family: @font-family-secondary;
@@ -254,48 +325,18 @@
             color: @light-active-color  !important;
         }
 
-        &:nth-child(1) {
-            color: #959595;
-            padding: 0 @padding 0 0;
-        }
+        // &:nth-child(1) {
+        //     color: #959595;
+        //     padding: 0 @padding 0 0;
+        // }
 
-        &:nth-child(1)::before {
-            content: "Copyright © 2015";
-            color: #555555;
-            margin: 0 @before-margin 0 0;
-        }
+        // &:nth-child(1)::before {
+        //     content: "Copyright © 2015";
+        //     color: #555555;
+        //     margin: 0 @before-margin 0 0;
+        // }
 
-        &:nth-child(3) {
-            color: #c7b299;
-        }
 
-        &:nth-child(4) {
-            padding: 0 0 0 @padding;
-            border: none;
-        }
 
-        &:nth-child(5) {
-            color: #959595;
-            padding: 0 @padding 0 0;
-            margin: 0 0 0 auto;
-        }
-
-        &:nth-child(5)::before {
-            content: "Designed by";
-            color: #555555;
-            margin: 0 @before-margin 0 0;
-        }
-
-        &:nth-child(6) {
-            color: #959595;
-            padding: 0 0 0 @padding;
-            border: none;
-        }
-
-        &:nth-child(6)::before {
-            content: "Only on";
-            color: #555555;
-            margin: 0 @before-margin 0 0;
-        }
     }
 }
